Updated for Jeff

--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,21 +103,19 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CameraSpeed=7
 
 [MRU]
-MRUItem0=/Game/Final/Levels/TestingArea
-MRUItem1=/Game/Final/Levels/MainGame
-MRUItem2=/Game/Final/Levels/2DSideScrollerExampleMap
-MRUItem3=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem0=/Game/Final/Levels/GameLevel
+MRUItem1=/Game/Final/GameLevel
+MRUItem2=/Game/Final/Levels/TestingArea
+MRUItem3=/Game/Final/Levels/MainGame
+MRUItem4=/Game/Final/Levels/2DSideScrollerExampleMap
+MRUItem5=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowser]
-<<<<<<< HEAD
 ContentBrowserTab1.SelectedPaths=/Game/Final
-=======
-<<<<<<< HEAD
 ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Tentacles
-=======
-ContentBrowserTab1.SelectedPaths=/Game/Final/Blueprint
->>>>>>> prototype-coding
->>>>>>> 10e11f7d5134cda4ecc340bfeaf994565304b7f6
+ContentBrowserTab1.SelectedPaths=/Game/Final
+None=======
+None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -139,10 +137,12 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Final/Levels/TestingArea
+LastLevel=/Game/Final/GameLevel
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss
+OpenAssetsAtExit=/Game/Final/Levels/GameLevel.GameLevel:PersistentLevel.GameLevel
 
 [DetailCategories]
 PaperTileMapActor.TransformCommon=True
@@ -204,7 +204,6 @@ PaperSprite.Sprite=True
 PaperSprite.Sockets=True
 PaperSprite.Collision=True
 PaperSprite.Rendering=True
-<<<<<<< HEAD
 PaperTileMap.Tile Map=True
 PaperTileMap.SelectedLayer=True
 PaperTileMap.Setup=True
@@ -216,7 +215,9 @@ Texture2D.Texture=True
 Texture2D.File Path=True
 Texture2D.Adjustments=True
 Texture2D.Compositing=True
-=======
+None=======
+None=======
+None=======
 BP_Following_Boss_C.TransformCommon=True
 BP_Following_Boss_C.Sprite=True
 BP_Following_Boss_C.Physics=True
@@ -470,9 +471,14 @@ BP_Boss_C.Sockets=True
 BP_Boss_C.ComponentReplication=True
 BP_Boss_C.Events=True
 PlayerStart.TransformCommon=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
 PlayerStart.Object=True
 PlayerStart.Rendering=True
+PlayerStart.Rendering=True
 PlayerStart.Input=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
 PlayerStart.Actor=True
 BP_Boss_WP3_C.TransformCommon=True
 BP_Boss_WP3_C.Sprite=True
@@ -546,7 +552,6 @@ PaperCharacter.Pawn=True
 PaperCharacter.Input=True
 PaperCharacter.Actor=True
 PaperCharacter.Materials=True
->>>>>>> prototype-coding
 CameraActor.TransformCommon=True
 CameraActor.CameraSettings=True
 CameraActor.CameraOptions=True
@@ -570,7 +575,6 @@ TriggerBox.Tags=True
 TriggerBox.Cooking=True
 TriggerBox.Input=True
 TriggerBox.Actor=True
-<<<<<<< HEAD
 StaticMeshActor.TransformCommon=True
 StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=True
@@ -581,11 +585,6 @@ StaticMeshActor.Rendering=True
 StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Actor=True
-PlayerStart.TransformCommon=True
-PlayerStart.Object=True
-PlayerStart.Rendering=True
-PlayerStart.Input=True
-PlayerStart.Actor=True
 BP_Maincharacter_C.Default=True
 BP_Maincharacter_C.Tick=True
 BP_Maincharacter_C.Character=True
@@ -595,7 +594,6 @@ BP_Maincharacter_C.Rendering=True
 BP_Maincharacter_C.Replication=True
 BP_Maincharacter_C.Input=True
 BP_Maincharacter_C.Actor=True
-=======
 Brush.TransformCommon=True
 Brush.BrushSettings=True
 Brush.Actor=True
@@ -883,7 +881,6 @@ PostProcessVolume.Rendering Features=True
 PostProcessVolume.PostProcessVolumeSettings=True
 PostProcessVolume.BrushSettings=True
 PostProcessVolume.Actor=True
->>>>>>> prototype-coding
 CameraComponent.Variable=True
 CameraComponent.TransformCommon=True
 CameraComponent.Sockets=True
@@ -899,8 +896,6 @@ CameraComponent.ComponentReplication=True
 CameraComponent.Activation=True
 CameraComponent.Cooking=True
 CameraComponent.Events=True
-<<<<<<< HEAD
-=======
 REINST_BP_Following_Boss_C_405.TransformCommon=True
 REINST_BP_Following_Boss_C_405.Sprite=True
 REINST_BP_Following_Boss_C_405.Physics=True
@@ -1186,7 +1181,82 @@ BP_Flying_Enemy_C.MovementComponent=True
 BP_Flying_Enemy_C.Shape=True
 BP_Flying_Enemy_C.Navigation=True
 BP_Flying_Enemy_C.Materials=True
->>>>>>> prototype-coding
+BP_Bomb_Box_C.Tick=True
+BP_Bomb_Box_C.Rendering=True
+BP_Bomb_Box_C.Replication=True
+BP_Bomb_Box_C.Input=True
+BP_Bomb_Box_C.Actor=True
+PaperFlipbookComponent.Variable=True
+PaperFlipbookComponent.TransformCommon=True
+PaperFlipbookComponent.Sockets=True
+PaperFlipbookComponent.Sprite=True
+PaperFlipbookComponent.Materials=True
+PaperFlipbookComponent.Physics=True
+PaperFlipbookComponent.Collision=True
+PaperFlipbookComponent.Lighting=True
+PaperFlipbookComponent.Rendering=True
+PaperFlipbookComponent.Tags=True
+PaperFlipbookComponent.ComponentReplication=True
+PaperFlipbookComponent.Activation=True
+PaperFlipbookComponent.Cooking=True
+PaperFlipbookComponent.Events=True
+GameLevel_C.Tick=True
+GameLevel_C.Default=True
+GameLevel_C.Replication=True
+GameLevel_C.Input=True
+GameLevel_C.Actor=True
+Generic.Surface Materials=True
+Generic.Geometry=True
+Generic.Surface Properties=True
+MapBuildDataRegistry.Lighting=True
+REINST_BP_Following_Boss_C_143.Variable=True
+REINST_BP_Following_Boss_C_143.Sockets=True
+REINST_BP_Following_Boss_C_143.Character Movement: Jumping / Falling=True
+REINST_BP_Following_Boss_C_143.Character Movement (General Settings)=True
+REINST_BP_Following_Boss_C_143.Character Movement: Walking=True
+REINST_BP_Following_Boss_C_143.Character Movement: Swimming=True
+REINST_BP_Following_Boss_C_143.Character Movement: Flying=True
+REINST_BP_Following_Boss_C_143.Character Movement: Custom Movement=True
+REINST_BP_Following_Boss_C_143.Character Movement (Rotation Settings)=True
+REINST_BP_Following_Boss_C_143.Character Movement (Networking)=True
+REINST_BP_Following_Boss_C_143.Character Movement: Physics Interaction=True
+REINST_BP_Following_Boss_C_143.Character Movement=True
+REINST_BP_Following_Boss_C_143.Character Movement: Avoidance=True
+REINST_BP_Following_Boss_C_143.Character Movement: NavMesh Movement=True
+REINST_BP_Following_Boss_C_143.RootMotion=True
+REINST_BP_Following_Boss_C_143.NavMovement=True
+REINST_BP_Following_Boss_C_143.Velocity=True
+REINST_BP_Following_Boss_C_143.PlanarMovement=True
+REINST_BP_Following_Boss_C_143.MovementComponent=True
+REINST_BP_Following_Boss_C_143.Tags=True
+REINST_BP_Following_Boss_C_143.ComponentReplication=True
+REINST_BP_Following_Boss_C_143.Activation=True
+REINST_BP_Following_Boss_C_143.Cooking=True
+REINST_BP_Following_Boss_C_143.Events=True
+REINST_BP_Following_Boss_C_155.Variable=True
+REINST_BP_Following_Boss_C_155.TransformCommon=True
+REINST_BP_Following_Boss_C_155.Sockets=True
+REINST_BP_Following_Boss_C_155.Shape=True
+REINST_BP_Following_Boss_C_155.Navigation=True
+REINST_BP_Following_Boss_C_155.Rendering=True
+REINST_BP_Following_Boss_C_155.Physics=True
+REINST_BP_Following_Boss_C_155.Collision=True
+REINST_BP_Following_Boss_C_155.Tags=True
+REINST_BP_Following_Boss_C_155.ComponentReplication=True
+REINST_BP_Following_Boss_C_155.Cooking=True
+REINST_BP_Following_Boss_C_155.Events=True
+REINST_BP_Following_Boss_C_167.Variable=True
+REINST_BP_Following_Boss_C_167.TransformCommon=True
+REINST_BP_Following_Boss_C_167.Sockets=True
+REINST_BP_Following_Boss_C_167.Shape=True
+REINST_BP_Following_Boss_C_167.Navigation=True
+REINST_BP_Following_Boss_C_167.Rendering=True
+REINST_BP_Following_Boss_C_167.Physics=True
+REINST_BP_Following_Boss_C_167.Collision=True
+REINST_BP_Following_Boss_C_167.Tags=True
+REINST_BP_Following_Boss_C_167.ComponentReplication=True
+REINST_BP_Following_Boss_C_167.Cooking=True
+REINST_BP_Following_Boss_C_167.Events=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1843,7 +1913,6 @@ Voice.TimeStamp=2018.10.02-23.34.51
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2018.10.02-23.34.45
 MovieSceneCapture.LastCompileMethod=Unknown
-<<<<<<< HEAD
 TextureEditor.TimeStamp=2018.10.02-23.34.50
 TextureEditor.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2018.10.02-23.34.43
@@ -1852,6 +1921,7 @@ BlueprintGraph.TimeStamp=2018.10.02-23.34.39
 BlueprintGraph.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss;
 RecentlyPlaced=/Game/Final/Sprites/Fruits/fruit_power.fruit_power;
 RecentlyPlaced=/Game/Final/Sprites/Fruits/fruit_health.fruit_health;
 RecentlyPlaced=/Game/Final/Sprites/Fruits/fruit_dash.fruit_dash;
@@ -1871,29 +1941,31 @@ RecentlyPlaced=/Game/Final/Sprites/Platforms/bomb_container.bomb_container;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Final/Sprites/background_Sprite.background_Sprite;
 RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0.tentacle_ground1_Sprite_0;
-RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentaclearchsmall_Sprite_0.tentaclearchsmall_Sprite_0;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
-MRUItem1=/Game/Final/Sprites/Fruits/IMG-0477_Sprite_0
-MRUItem2=/Game/Final/Blueprint/BP_Maincharacter
-MRUItem3=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
-MRUItem4=/Game/Final/Sprites/Platforms/box_yellow_Sprite_0
-MRUItem5=/Game/Final/Sprites/Platforms/box_red_Sprite_0
-MRUItem6=/Game/Final/Sprites/Platforms/box_green_Sprite_0
-MRUItem7=/Game/Final/Sprites/Platforms/box_blue_Sprite_0
-MRUItem8=/Game/Final/Sprites/Platforms/box1_Sprite_0
-MRUItem9=/Game/Final/Sprites/Trees/tree1_Sprite
-MRUItem10=/Game/Final/Sprites/Trees/Tree_stump_Sprite
-MRUItem11=/Game/Final/Tilesets/SpriteSheet_Trees
-MRUItem12=/Game/Final/Tilesets/SpriteSheet_Trees2
-MRUItem13=/Game/Final/Tilesets/Jungle3
-MRUItem14=/Game/Final/Tilesets/Jungle4
-MRUItem15=/Game/Final/Tilesets/Jungle1
-MRUItem16=/Game/Final/Tilesets/Jungle11
-MRUItem17=/Game/Final/Tilesets/Jungle10
+MRUItem0=/Game/Final/Blueprint/BP_Following_Boss
+MRUItem1=/Game/Final/GameLevel
+MRUItem2=/Game/Final/Levels/TestingArea
+MRUItem3=/Game/Final/Blueprint/BP_Bomb_Box
+MRUItem4=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem5=/Game/Final/Widget/W_Player_Health
+MRUItem6=/Game/Final/Blueprint/BP_Bullet
+MRUItem7=/Game/Final/Blueprint/Boss/BP_Boss
+MRUItem8=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP3
+MRUItem9=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP1
+MRUItem10=/Game/Final/Widget/W_BossHealth
+MRUItem11=/Game/Final/Levels/MainGame
+MRUItem12=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP4
+MRUItem13=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP2
+MRUItem14=/Game/Final/Enumerations/BossWeakPoint
+MRUItem15=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
+MRUItem16=/Game/Final/Tilesets/Jungle4
+MRUItem17=/Game/Final/Tilesets/Jungle1
+MRUItem18=/Game/Final/Tilesets/Jungle11
+MRUItem19=/Game/Final/Tilesets/Jungle10
 
 [AssetEditorToolkitTabLocation]
+/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
 /Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
 /Game/Final/Tilesets/Jungle10.Jungle10=1
 /Game/Final/Tilesets/Jungle11.Jungle11=1
@@ -1910,51 +1982,6 @@ MRUItem17=/Game/Final/Tilesets/Jungle10
 /Game/Final/Sprites/Platforms/box_red_Sprite_0.box_red_Sprite_0=1
 /Game/Final/Sprites/Platforms/box_yellow_Sprite_0.box_yellow_Sprite_0=1
 /Game/Final/Blueprint/BP_Maincharacter.BP_Maincharacter=1
-
-[DetailPropertyExpansion]
-PaperSprite="\"Object.Collision.CollisionGeometry\" "
-Object="\"Object.Collision.CollisionGeometry\" "
-
-[DetailCustomWidgetExpansion]
-CameraComponent=CameraComponent.Lens.Lens
-=======
-HierarchicalLODUtilities.TimeStamp=2018.09.28-03.44.54
-HierarchicalLODUtilities.LastCompileMethod=Unknown
-BlueprintGraph.TimeStamp=2018.10.01-03.52.42
-BlueprintGraph.LastCompileMethod=External
-SequencerWidgets.TimeStamp=2018.09.28-03.44.59
-SequencerWidgets.LastCompileMethod=Unknown
-ExternalImagePicker.TimeStamp=2018.09.28-03.44.54
-ExternalImagePicker.LastCompileMethod=Unknown
-
-[PlacementMode]
-RecentlyPlaced=/Game/Final/Blueprint/BP_Flying_Enemy.BP_Flying_Enemy;
-RecentlyPlaced=/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss;
-RecentlyPlaced=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP4.BP_Boss_WP4;
-RecentlyPlaced=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP3.BP_Boss_WP3;
-RecentlyPlaced=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP2.BP_Boss_WP2;
-RecentlyPlaced=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP1.BP_Boss_WP1;
-RecentlyPlaced=/Game/Final/Blueprint/Boss/BP_Boss.BP_Boss;
-RecentlyPlaced=/Game/Final/Sprites/tentacleenemy_Sprite.tentacleenemy_Sprite;
-
-[ContentBrowserRecent]
-MRUItem0=/Game/Final/Blueprint/BP_Following_Boss
-MRUItem1=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem2=/Game/Final/Levels/TestingArea
-MRUItem3=/Game/Final/Widget/W_Player_Health
-MRUItem4=/Game/Final/Blueprint/BP_Bullet
-MRUItem5=/Game/Final/Blueprint/Boss/BP_Boss
-MRUItem6=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP3
-MRUItem7=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP1
-MRUItem8=/Game/Final/Widget/W_BossHealth
-MRUItem9=/Game/Final/Levels/MainGame
-MRUItem10=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP4
-MRUItem11=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP2
-MRUItem12=/Game/Final/Enumerations/BossWeakPoint
-MRUItem13=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
-
-[AssetEditorToolkitTabLocation]
-/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
 /Game/Final/Enumerations/BossWeakPoint.BossWeakPoint=1
 /Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP1.BP_Boss_WP1=1
 /Game/Final/Blueprint/Boss/BP_Boss.BP_Boss=1
@@ -1966,6 +1993,30 @@ MRUItem13=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
 /Game/Final/Widget/W_Player_Health.W_Player_Health=1
 /Game/Final/Blueprint/BP_Flying_Enemy.BP_Flying_Enemy=1
 /Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss=1
+/Game/Final/Blueprint/BP_Bomb_Box.BP_Bomb_Box=1
+/Game/Final/GameLevel.GameLevel:PersistentLevel.GameLevel=1
+/Game/Final/Levels/TestingArea.TestingArea:PersistentLevel.TestingArea=1
+/Game/Final/GameLevel_BuiltData.GameLevel_BuiltData=1
+
+[DetailPropertyExpansion]
+PaperSprite="\"Object.Collision.CollisionGeometry\" "
+Object=
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+
+[DetailCustomWidgetExpansion]
+CameraComponent=CameraComponent.Lens.Lens,
+None=======
+HierarchicalLODUtilities.TimeStamp=2018.09.28-03.44.54
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2018.10.01-03.52.42
+BlueprintGraph.LastCompileMethod=External
+SequencerWidgets.TimeStamp=2018.09.28-03.44.59
+SequencerWidgets.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2018.09.28-03.44.54
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -1993,11 +2044,12 @@ ProfileName=
 ScaleFactor=1.000000
 bCanPreviewSwapAspectRatio=False
 
-[DetailPropertyExpansion]
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
->>>>>>> prototype-coding
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[MessageLog]
+LastLogListing=LightingResults
 
 
