--- a/Finals/Config/DefaultEngine.ini
+++ b/Finals/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=Finals
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Final/Levels/TestingArea.TestingArea
+EditorStartupMap=/Game/Final/Levels/GameLevel.GameLevel
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
