--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,7 +79,7 @@ LastExecutedLaunchName=ALIENMOMO
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowPosition=(X=315,Y=163)
+NewWindowPosition=(X=315,Y=143)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -113,7 +113,7 @@ MRUItem5=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Final
 ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Tentacles
-ContentBrowserTab1.SelectedPaths=/Game/Final
+ContentBrowserTab1.SelectedPaths=/Game/Final/Levels
 None=======
 None=======
 ContentBrowserTab1.SourcesExpanded=True
@@ -137,12 +137,10 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Final/GameLevel
+LastLevel=/Game/Final/Levels/GameLevel
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss
-OpenAssetsAtExit=/Game/Final/Levels/GameLevel.GameLevel:PersistentLevel.GameLevel
 
 [DetailCategories]
 PaperTileMapActor.TransformCommon=True
@@ -1277,7 +1275,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/l_war/OneDrive/Documents/Github/project_final_2/Project-Final/Finals/Content/Final/Levels
+UNR=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/Final/Levels
 BRUSH=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBX=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBXAnim=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
@@ -1919,6 +1917,8 @@ HierarchicalLODUtilities.TimeStamp=2018.10.02-23.34.43
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2018.10.02-23.34.39
 BlueprintGraph.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2018.10.02-23.34.42
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [PlacementMode]
 RecentlyPlaced=/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss;
@@ -1943,26 +1943,26 @@ RecentlyPlaced=/Game/Final/Sprites/background_Sprite.background_Sprite;
 RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0.tentacle_ground1_Sprite_0;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Blueprint/BP_Following_Boss
-MRUItem1=/Game/Final/GameLevel
-MRUItem2=/Game/Final/Levels/TestingArea
-MRUItem3=/Game/Final/Blueprint/BP_Bomb_Box
-MRUItem4=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem5=/Game/Final/Widget/W_Player_Health
-MRUItem6=/Game/Final/Blueprint/BP_Bullet
-MRUItem7=/Game/Final/Blueprint/Boss/BP_Boss
-MRUItem8=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP3
-MRUItem9=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP1
-MRUItem10=/Game/Final/Widget/W_BossHealth
-MRUItem11=/Game/Final/Levels/MainGame
-MRUItem12=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP4
-MRUItem13=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP2
-MRUItem14=/Game/Final/Enumerations/BossWeakPoint
-MRUItem15=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
-MRUItem16=/Game/Final/Tilesets/Jungle4
-MRUItem17=/Game/Final/Tilesets/Jungle1
-MRUItem18=/Game/Final/Tilesets/Jungle11
-MRUItem19=/Game/Final/Tilesets/Jungle10
+MRUItem0=/Game/Final/Levels/GameLevel
+MRUItem1=/Game/Final/Blueprint/BP_Following_Boss
+MRUItem2=/Game/Final/GameLevel
+MRUItem3=/Game/Final/Levels/TestingArea
+MRUItem4=/Game/Final/Blueprint/BP_Bomb_Box
+MRUItem5=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem6=/Game/Final/Widget/W_Player_Health
+MRUItem7=/Game/Final/Blueprint/BP_Bullet
+MRUItem8=/Game/Final/Blueprint/Boss/BP_Boss
+MRUItem9=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP3
+MRUItem10=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP1
+MRUItem11=/Game/Final/Widget/W_BossHealth
+MRUItem12=/Game/Final/Levels/MainGame
+MRUItem13=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP4
+MRUItem14=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP2
+MRUItem15=/Game/Final/Enumerations/BossWeakPoint
+MRUItem16=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
+MRUItem17=/Game/Final/Tilesets/Jungle4
+MRUItem18=/Game/Final/Tilesets/Jungle1
+MRUItem19=/Game/Final/Tilesets/Jungle11
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
