--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,9 +103,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CameraSpeed=7
 
 [MRU]
-MRUItem0=/Game/Final/Levels/GameLevel
-MRUItem1=/Game/Final/GameLevel
-MRUItem2=/Game/Final/Levels/TestingArea
+MRUItem0=/Game/Final/Levels/TestingArea
+MRUItem1=/Game/Final/Levels/GameLevel
+MRUItem2=/Game/Final/GameLevel
 MRUItem3=/Game/Final/Levels/MainGame
 MRUItem4=/Game/Final/Levels/2DSideScrollerExampleMap
 MRUItem5=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
@@ -113,7 +113,7 @@ MRUItem5=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Final
 ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Tentacles
-ContentBrowserTab1.SelectedPaths=/Game/Final
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP
 None=======
 None=======
 ContentBrowserTab1.SourcesExpanded=True
@@ -137,12 +137,11 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Final/GameLevel
+LastLevel=/Game/Final/Levels/TestingArea
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss
-OpenAssetsAtExit=/Game/Final/Levels/GameLevel.GameLevel:PersistentLevel.GameLevel
+OpenAssetsAtExit=/Game/Final/Blueprint/Assets/BP_Damage_Box.BP_Damage_Box
 
 [DetailCategories]
 PaperTileMapActor.TransformCommon=True
@@ -1257,6 +1256,85 @@ REINST_BP_Following_Boss_C_167.Tags=True
 REINST_BP_Following_Boss_C_167.ComponentReplication=True
 REINST_BP_Following_Boss_C_167.Cooking=True
 REINST_BP_Following_Boss_C_167.Events=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+BP_Oneshot_Tentacle_C.Tick=True
+BP_Oneshot_Tentacle_C.Rendering=True
+BP_Oneshot_Tentacle_C.Replication=True
+BP_Oneshot_Tentacle_C.Input=True
+BP_Oneshot_Tentacle_C.Actor=True
+BP_Oneshot_Tentacle_Small_C.Tick=True
+BP_Oneshot_Tentacle_Small_C.Rendering=True
+BP_Oneshot_Tentacle_Small_C.Replication=True
+BP_Oneshot_Tentacle_Small_C.Input=True
+BP_Oneshot_Tentacle_Small_C.Actor=True
+BP_Tentacle_1_C.Tick=True
+BP_Tentacle_1_C.Rendering=True
+BP_Tentacle_1_C.Replication=True
+BP_Tentacle_1_C.Input=True
+BP_Tentacle_1_C.Actor=True
+BP_Tentacle_2_C.Tick=True
+BP_Tentacle_2_C.Rendering=True
+BP_Tentacle_2_C.Replication=True
+BP_Tentacle_2_C.Input=True
+BP_Tentacle_2_C.Actor=True
+BP_Tentacle_3_C.Tick=True
+BP_Tentacle_3_C.Rendering=True
+BP_Tentacle_3_C.Replication=True
+BP_Tentacle_3_C.Input=True
+BP_Tentacle_3_C.Actor=True
+BP_Tentacle_4_C.Tick=True
+BP_Tentacle_4_C.Rendering=True
+BP_Tentacle_4_C.Replication=True
+BP_Tentacle_4_C.Input=True
+BP_Tentacle_4_C.Actor=True
+BP_Tentacle_5_C.Tick=True
+BP_Tentacle_5_C.Rendering=True
+BP_Tentacle_5_C.Replication=True
+BP_Tentacle_5_C.Input=True
+BP_Tentacle_5_C.Actor=True
+BP_Tentacle_6_C.Tick=True
+BP_Tentacle_6_C.Rendering=True
+BP_Tentacle_6_C.Replication=True
+BP_Tentacle_6_C.Input=True
+BP_Tentacle_6_C.Actor=True
+BP_Health_Box_C.Tick=True
+BP_Health_Box_C.Rendering=True
+BP_Health_Box_C.Replication=True
+BP_Health_Box_C.Input=True
+BP_Health_Box_C.Actor=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+BP_Damage_Box_C.Tick=True
+BP_Damage_Box_C.Rendering=True
+BP_Damage_Box_C.Replication=True
+BP_Damage_Box_C.Input=True
+BP_Damage_Box_C.Actor=True
+BP_RNG_Box_C.Tick=True
+BP_RNG_Box_C.Rendering=True
+BP_RNG_Box_C.Replication=True
+BP_RNG_Box_C.Input=True
+BP_RNG_Box_C.Actor=True
+BP_Damage_Box_C.TransformCommon=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1921,6 +1999,7 @@ BlueprintGraph.TimeStamp=2018.10.02-23.34.39
 BlueprintGraph.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/Final/Blueprint/Assets/BP_Damage_Box.BP_Damage_Box;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss;
 RecentlyPlaced=/Game/Final/Sprites/Fruits/fruit_power.fruit_power;
 RecentlyPlaced=/Game/Final/Sprites/Fruits/fruit_health.fruit_health;
@@ -1940,29 +2019,28 @@ RecentlyPlaced=/Game/Final/Sprites/Trees/IMG-0465_Sprite_0.IMG-0465_Sprite_0;
 RecentlyPlaced=/Game/Final/Sprites/Platforms/bomb_container.bomb_container;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Final/Sprites/background_Sprite.background_Sprite;
-RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0.tentacle_ground1_Sprite_0;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Blueprint/BP_Following_Boss
-MRUItem1=/Game/Final/GameLevel
-MRUItem2=/Game/Final/Levels/TestingArea
-MRUItem3=/Game/Final/Blueprint/BP_Bomb_Box
-MRUItem4=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem5=/Game/Final/Widget/W_Player_Health
-MRUItem6=/Game/Final/Blueprint/BP_Bullet
-MRUItem7=/Game/Final/Blueprint/Boss/BP_Boss
-MRUItem8=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP3
-MRUItem9=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP1
-MRUItem10=/Game/Final/Widget/W_BossHealth
-MRUItem11=/Game/Final/Levels/MainGame
-MRUItem12=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP4
-MRUItem13=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP2
-MRUItem14=/Game/Final/Enumerations/BossWeakPoint
-MRUItem15=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
-MRUItem16=/Game/Final/Tilesets/Jungle4
-MRUItem17=/Game/Final/Tilesets/Jungle1
-MRUItem18=/Game/Final/Tilesets/Jungle11
-MRUItem19=/Game/Final/Tilesets/Jungle10
+MRUItem0=/Game/Final/Blueprint/Assets/BP_Damage_Box
+MRUItem1=/Game/Final/Blueprint/Assets/BP_RNG_Box
+MRUItem2=/Game/Final/Blueprint/Assets/BP_Health_Box
+MRUItem3=/Game/Final/Blueprint/Assets/BP_Tentacle_6
+MRUItem4=/Game/Final/Blueprint/Assets/BP_Tentacle_5
+MRUItem5=/Game/Final/Blueprint/Assets/BP_Tentacle_4
+MRUItem6=/Game/Final/Blueprint/Assets/BP_Tentacle_3
+MRUItem7=/Game/Final/Blueprint/Assets/BP_Tentacle_2
+MRUItem8=/Game/Final/Blueprint/Assets/BP_Tentacle_1
+MRUItem9=/Game/Final/Blueprint/Assets/BP_Oneshot_Tentacle_Small
+MRUItem10=/Game/Final/Blueprint/Assets/BP_Oneshot_Tentacle
+MRUItem11=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem12=/Game/Final/Blueprint/BP_Following_Boss
+MRUItem13=/Game/Final/GameLevel
+MRUItem14=/Game/Final/Levels/TestingArea
+MRUItem15=/Game/Final/Blueprint/BP_Bomb_Box
+MRUItem16=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem17=/Game/Final/Widget/W_Player_Health
+MRUItem18=/Game/Final/Blueprint/BP_Bullet
+MRUItem19=/Game/Final/Blueprint/Boss/BP_Boss
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
@@ -1997,6 +2075,9 @@ MRUItem19=/Game/Final/Tilesets/Jungle10
 /Game/Final/GameLevel.GameLevel:PersistentLevel.GameLevel=1
 /Game/Final/Levels/TestingArea.TestingArea:PersistentLevel.TestingArea=1
 /Game/Final/GameLevel_BuiltData.GameLevel_BuiltData=1
+/Game/Final/Blueprint/Assets/BP_Oneshot_Tentacle_Large.BP_Oneshot_Tentacle_Large=1
+/Game/Final/Blueprint/Assets/BP_RNG_Box.BP_RNG_Box=1
+/Game/Final/Blueprint/Assets/BP_Damage_Box.BP_Damage_Box=1
 
 [DetailPropertyExpansion]
 PaperSprite="\"Object.Collision.CollisionGeometry\" "
@@ -2051,5 +2132,8 @@ OnlyBuildVisibility=False
 
 [MessageLog]
 LastLogListing=LightingResults
+
+[SelectionDetails]
+PreserveScaleRatio=True
 
 
