--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,7 +113,7 @@ MRUItem5=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Final
 ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Tentacles
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP
+ContentBrowserTab1.SelectedPaths=/Game/Final/Blueprint
 None=======
 None=======
 ContentBrowserTab1.SourcesExpanded=True
@@ -141,7 +141,6 @@ LastLevel=/Game/Final/Levels/TestingArea
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Final/Blueprint/Assets/BP_Damage_Box.BP_Damage_Box
 
 [DetailCategories]
 PaperTileMapActor.TransformCommon=True
@@ -1335,6 +1334,15 @@ BoxComponent.Tags=True
 BoxComponent.ComponentReplication=True
 BoxComponent.Cooking=True
 BoxComponent.Events=True
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1997,6 +2005,10 @@ HierarchicalLODUtilities.TimeStamp=2018.10.02-23.34.43
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2018.10.02-23.34.39
 BlueprintGraph.LastCompileMethod=Unknown
+Cascade.TimeStamp=2018.10.01-03.52.43
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2018.10.01-03.52.45
+DistCurveEditor.LastCompileMethod=Unknown
 
 [PlacementMode]
 RecentlyPlaced=/Game/Final/Blueprint/Assets/BP_Damage_Box.BP_Damage_Box;
@@ -2021,26 +2033,26 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 RecentlyPlaced=/Game/Final/Sprites/background_Sprite.background_Sprite;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Blueprint/Assets/BP_Damage_Box
-MRUItem1=/Game/Final/Blueprint/Assets/BP_RNG_Box
-MRUItem2=/Game/Final/Blueprint/Assets/BP_Health_Box
-MRUItem3=/Game/Final/Blueprint/Assets/BP_Tentacle_6
-MRUItem4=/Game/Final/Blueprint/Assets/BP_Tentacle_5
-MRUItem5=/Game/Final/Blueprint/Assets/BP_Tentacle_4
-MRUItem6=/Game/Final/Blueprint/Assets/BP_Tentacle_3
-MRUItem7=/Game/Final/Blueprint/Assets/BP_Tentacle_2
-MRUItem8=/Game/Final/Blueprint/Assets/BP_Tentacle_1
-MRUItem9=/Game/Final/Blueprint/Assets/BP_Oneshot_Tentacle_Small
-MRUItem10=/Game/Final/Blueprint/Assets/BP_Oneshot_Tentacle
-MRUItem11=/Game/Final/Blueprint/BP_Maincharacter
-MRUItem12=/Game/Final/Blueprint/BP_Following_Boss
-MRUItem13=/Game/Final/GameLevel
-MRUItem14=/Game/Final/Levels/TestingArea
-MRUItem15=/Game/Final/Blueprint/BP_Bomb_Box
-MRUItem16=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem17=/Game/Final/Widget/W_Player_Health
-MRUItem18=/Game/Final/Blueprint/BP_Bullet
-MRUItem19=/Game/Final/Blueprint/Boss/BP_Boss
+MRUItem0=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem1=/Game/Final/Particles/P_Explosion
+MRUItem2=/Game/Final/Blueprint/Assets/BP_Damage_Box
+MRUItem3=/Game/Final/Blueprint/Assets/BP_RNG_Box
+MRUItem4=/Game/Final/Blueprint/Assets/BP_Health_Box
+MRUItem5=/Game/Final/Blueprint/Assets/BP_Tentacle_6
+MRUItem6=/Game/Final/Blueprint/Assets/BP_Tentacle_5
+MRUItem7=/Game/Final/Blueprint/Assets/BP_Tentacle_4
+MRUItem8=/Game/Final/Blueprint/Assets/BP_Tentacle_3
+MRUItem9=/Game/Final/Blueprint/Assets/BP_Tentacle_2
+MRUItem10=/Game/Final/Blueprint/Assets/BP_Tentacle_1
+MRUItem11=/Game/Final/Blueprint/Assets/BP_Oneshot_Tentacle_Small
+MRUItem12=/Game/Final/Blueprint/Assets/BP_Oneshot_Tentacle
+MRUItem13=/Game/Final/Blueprint/BP_Following_Boss
+MRUItem14=/Game/Final/GameLevel
+MRUItem15=/Game/Final/Levels/TestingArea
+MRUItem16=/Game/Final/Blueprint/BP_Bomb_Box
+MRUItem17=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem18=/Game/Final/Widget/W_Player_Health
+MRUItem19=/Game/Final/Blueprint/BP_Bullet
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
@@ -2078,6 +2090,7 @@ MRUItem19=/Game/Final/Blueprint/Boss/BP_Boss
 /Game/Final/Blueprint/Assets/BP_Oneshot_Tentacle_Large.BP_Oneshot_Tentacle_Large=1
 /Game/Final/Blueprint/Assets/BP_RNG_Box.BP_RNG_Box=1
 /Game/Final/Blueprint/Assets/BP_Damage_Box.BP_Damage_Box=1
+/Game/Final/Particles/P_Explosion.P_Explosion=1
 
 [DetailPropertyExpansion]
 PaperSprite="\"Object.Collision.CollisionGeometry\" "
@@ -2135,5 +2148,38 @@ LastLogListing=LightingResults
 
 [SelectionDetails]
 PreserveScaleRatio=True
+
+[/Script/UnrealEd.CascadeOptions]
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Light_Unselected=(B=49,G=40,R=90,A=0)
+ModuleColor_Light_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_SubUV_Unselected=(B=49,G=90,R=40,A=0)
+ModuleColor_SubUV_Selected=(B=100,G=200,R=50,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+ParticleMemoryUpdateTime=0.000000
+bShowFloor=False
+FloorMesh=/Engine/EditorMeshes/AnimTreeEd_PreviewFloor.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
+
+[CascadeEditor]
+LightDir=P=-44.999969 Y=-179.999969 R=0.000000
 
 
