--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,7 +113,7 @@ MRUItem5=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Final
 ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Tentacles
-ContentBrowserTab1.SelectedPaths=/Game/Final/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Trees
 None=======
 None=======
 ContentBrowserTab1.SourcesExpanded=True
@@ -1943,26 +1943,26 @@ RecentlyPlaced=/Game/Final/Sprites/background_Sprite.background_Sprite;
 RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0.tentacle_ground1_Sprite_0;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Levels/GameLevel
-MRUItem1=/Game/Final/Blueprint/BP_Following_Boss
-MRUItem2=/Game/Final/GameLevel
-MRUItem3=/Game/Final/Levels/TestingArea
-MRUItem4=/Game/Final/Blueprint/BP_Bomb_Box
-MRUItem5=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem6=/Game/Final/Widget/W_Player_Health
-MRUItem7=/Game/Final/Blueprint/BP_Bullet
-MRUItem8=/Game/Final/Blueprint/Boss/BP_Boss
-MRUItem9=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP3
-MRUItem10=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP1
-MRUItem11=/Game/Final/Widget/W_BossHealth
-MRUItem12=/Game/Final/Levels/MainGame
-MRUItem13=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP4
-MRUItem14=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP2
-MRUItem15=/Game/Final/Enumerations/BossWeakPoint
-MRUItem16=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
-MRUItem17=/Game/Final/Tilesets/Jungle4
-MRUItem18=/Game/Final/Tilesets/Jungle1
-MRUItem19=/Game/Final/Tilesets/Jungle11
+MRUItem0=/Game/Final/Sprites/Trees/IMG-0465_Sprite_0
+MRUItem1=/Game/Final/Sprites/Tentacles/tentaclearchsmall_Sprite_0
+MRUItem2=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0
+MRUItem3=/Game/Final/Sprites/Tentacles/tentacle_ground2_Sprite_0
+MRUItem4=/Game/Final/Sprites/Tentacles/tentacle_ground2
+MRUItem5=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0
+MRUItem6=/Game/Final/Sprites/Tentacles/tentacle_ground1
+MRUItem7=/Game/Final/Sprites/Tentacles/tentacle2_Sprite_1
+MRUItem8=/Game/Final/Sprites/Tentacles/tentacle2_Sprite_0
+MRUItem9=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
+MRUItem10=/Game/Final/Sprites/Tentacles/tentacle1
+MRUItem11=/Game/Final/Levels/GameLevel
+MRUItem12=/Game/Final/Blueprint/BP_Following_Boss
+MRUItem13=/Game/Final/GameLevel
+MRUItem14=/Game/Final/Levels/TestingArea
+MRUItem15=/Game/Final/Blueprint/BP_Bomb_Box
+MRUItem16=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem17=/Game/Final/Widget/W_Player_Health
+MRUItem18=/Game/Final/Blueprint/BP_Bullet
+MRUItem19=/Game/Final/Blueprint/Boss/BP_Boss
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
@@ -1997,10 +1997,21 @@ MRUItem19=/Game/Final/Tilesets/Jungle11
 /Game/Final/GameLevel.GameLevel:PersistentLevel.GameLevel=1
 /Game/Final/Levels/TestingArea.TestingArea:PersistentLevel.TestingArea=1
 /Game/Final/GameLevel_BuiltData.GameLevel_BuiltData=1
+/Game/Final/Sprites/Tentacles/tentacle1.tentacle1=1
+/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0.tentacle1_Sprite_0=1
+/Game/Final/Sprites/Tentacles/tentacle2_Sprite_0.tentacle2_Sprite_0=1
+/Game/Final/Sprites/Tentacles/tentacle2_Sprite_1.tentacle2_Sprite_1=1
+/Game/Final/Sprites/Tentacles/tentacle_ground1.tentacle_ground1=1
+/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0.tentacle_ground1_Sprite_0=1
+/Game/Final/Sprites/Tentacles/tentacle_ground2.tentacle_ground2=1
+/Game/Final/Sprites/Tentacles/tentacle_ground2_Sprite_0.tentacle_ground2_Sprite_0=1
+/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0.tentaclearchlarge_Sprite_0=1
+/Game/Final/Sprites/Tentacles/tentaclearchsmall_Sprite_0.tentaclearchsmall_Sprite_0=1
+/Game/Final/Sprites/Trees/IMG-0465_Sprite_0.IMG-0465_Sprite_0=1
 
 [DetailPropertyExpansion]
 PaperSprite="\"Object.Collision.CollisionGeometry\" "
-Object=
+Object="\"Object.Collision.CollisionGeometry\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
