Added Menu assets

--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,7 +113,7 @@ MRUItem5=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Final
 ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Tentacles
-ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Trees
+ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Menus
 None=======
 None=======
 ContentBrowserTab1.SourcesExpanded=True
@@ -1279,7 +1279,7 @@ UNR=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/Final/Levels
 BRUSH=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBX=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBXAnim=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
-GenericImport=../../../../../../Finals/Opto/islandtree2.png
+GenericImport=../../../../../../Finals/Opto/MenuScreens/GameOver_background.png
 GenericExport=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 GenericOpen=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 GenericSave=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
@@ -1943,26 +1943,26 @@ RecentlyPlaced=/Game/Final/Sprites/background_Sprite.background_Sprite;
 RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0.tentacle_ground1_Sprite_0;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Sprites/Trees/IMG-0465_Sprite_0
-MRUItem1=/Game/Final/Sprites/Tentacles/tentaclearchsmall_Sprite_0
-MRUItem2=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0
-MRUItem3=/Game/Final/Sprites/Tentacles/tentacle_ground2_Sprite_0
-MRUItem4=/Game/Final/Sprites/Tentacles/tentacle_ground2
-MRUItem5=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0
-MRUItem6=/Game/Final/Sprites/Tentacles/tentacle_ground1
-MRUItem7=/Game/Final/Sprites/Tentacles/tentacle2_Sprite_1
-MRUItem8=/Game/Final/Sprites/Tentacles/tentacle2_Sprite_0
-MRUItem9=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
-MRUItem10=/Game/Final/Sprites/Tentacles/tentacle1
-MRUItem11=/Game/Final/Levels/GameLevel
-MRUItem12=/Game/Final/Blueprint/BP_Following_Boss
-MRUItem13=/Game/Final/GameLevel
-MRUItem14=/Game/Final/Levels/TestingArea
-MRUItem15=/Game/Final/Blueprint/BP_Bomb_Box
-MRUItem16=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem17=/Game/Final/Widget/W_Player_Health
-MRUItem18=/Game/Final/Blueprint/BP_Bullet
-MRUItem19=/Game/Final/Blueprint/Boss/BP_Boss
+MRUItem0=/Game/Final/Sprites/Trees/Tree_stump_Sprite
+MRUItem1=/Game/Final/Sprites/Trees/tree_stump_small_Sprite
+MRUItem2=/Game/Final/Sprites/Trees/tree_stump_small
+MRUItem3=/Game/Final/Sprites/Trees/tree_stump3_Sprite
+MRUItem4=/Game/Final/Sprites/Trees/tree_stump3
+MRUItem5=/Game/Final/Sprites/Trees/tree2_Sprite
+MRUItem6=/Game/Final/Sprites/Trees/tree1_Sprite
+MRUItem7=/Game/Final/Sprites/Trees/isnlandstrees_Sprite_0
+MRUItem8=/Game/Final/Sprites/Trees/isnlandstrees
+MRUItem9=/Game/Final/Sprites/Trees/islandtrees3_Sprite_1
+MRUItem10=/Game/Final/Sprites/Trees/islandtrees3_Sprite_0
+MRUItem11=/Game/Final/Sprites/Trees/islandtree2_Sprite_0
+MRUItem12=/Game/Final/Sprites/Trees/IMG-0465_Sprite_0
+MRUItem13=/Game/Final/Sprites/Trees/IMG-0465_Sprite_1
+MRUItem14=/Game/Final/Sprites/Tentacles/tentaclearchsmall_Sprite_0
+MRUItem15=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0
+MRUItem16=/Game/Final/Sprites/Tentacles/tentacle_ground2_Sprite_0
+MRUItem17=/Game/Final/Sprites/Tentacles/tentacle_ground2
+MRUItem18=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0
+MRUItem19=/Game/Final/Sprites/Tentacles/tentacle_ground1
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
@@ -2008,10 +2008,21 @@ MRUItem19=/Game/Final/Blueprint/Boss/BP_Boss
 /Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0.tentaclearchlarge_Sprite_0=1
 /Game/Final/Sprites/Tentacles/tentaclearchsmall_Sprite_0.tentaclearchsmall_Sprite_0=1
 /Game/Final/Sprites/Trees/IMG-0465_Sprite_0.IMG-0465_Sprite_0=1
+/Game/Final/Sprites/Trees/IMG-0465_Sprite_1.IMG-0465_Sprite_1=1
+/Game/Final/Sprites/Trees/islandtree2_Sprite_0.islandtree2_Sprite_0=1
+/Game/Final/Sprites/Trees/islandtrees3_Sprite_0.islandtrees3_Sprite_0=1
+/Game/Final/Sprites/Trees/islandtrees3_Sprite_1.islandtrees3_Sprite_1=1
+/Game/Final/Sprites/Trees/isnlandstrees.isnlandstrees=1
+/Game/Final/Sprites/Trees/isnlandstrees_Sprite_0.isnlandstrees_Sprite_0=1
+/Game/Final/Sprites/Trees/tree2_Sprite.tree2_Sprite=1
+/Game/Final/Sprites/Trees/tree_stump3.tree_stump3=1
+/Game/Final/Sprites/Trees/tree_stump3_Sprite.tree_stump3_Sprite=1
+/Game/Final/Sprites/Trees/tree_stump_small.tree_stump_small=1
+/Game/Final/Sprites/Trees/tree_stump_small_Sprite.tree_stump_small_Sprite=1
 
 [DetailPropertyExpansion]
-PaperSprite="\"Object.Collision.CollisionGeometry\" "
-Object="\"Object.Collision.CollisionGeometry\" "
+PaperSprite="\"Object.Collision.CollisionGeometry\" \"Object.Collision.CollisionGeometry.Shapes.Shapes[0].Vertices.Vertices[7]\" "
+Object="\"Object.Collision.CollisionGeometry\" \"Object.Collision.CollisionGeometry.Shapes.Shapes[0].Vertices.Vertices[7]\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
