--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,7 +113,7 @@ MRUItem5=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Final
 ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Tentacles
-ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Menus
+ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Tentacles
 None=======
 None=======
 ContentBrowserTab1.SourcesExpanded=True
@@ -1279,7 +1279,7 @@ UNR=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/Final/Levels
 BRUSH=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBX=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBXAnim=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
-GenericImport=../../../../../../Finals/Opto/MenuScreens/GameOver_background.png
+GenericImport=../../../../../../Finals/Opto/MenuScreens/GameOver_Quit.png
 GenericExport=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 GenericOpen=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 GenericSave=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
@@ -1921,6 +1921,7 @@ ExternalImagePicker.TimeStamp=2018.10.02-23.34.42
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentaclearchsmall_Sprite_0.tentaclearchsmall_Sprite_0;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss;
 RecentlyPlaced=/Game/Final/Sprites/Fruits/fruit_power.fruit_power;
 RecentlyPlaced=/Game/Final/Sprites/Fruits/fruit_health.fruit_health;
@@ -1940,29 +1941,28 @@ RecentlyPlaced=/Game/Final/Sprites/Trees/IMG-0465_Sprite_0.IMG-0465_Sprite_0;
 RecentlyPlaced=/Game/Final/Sprites/Platforms/bomb_container.bomb_container;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Final/Sprites/background_Sprite.background_Sprite;
-RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0.tentacle_ground1_Sprite_0;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Sprites/Trees/Tree_stump_Sprite
-MRUItem1=/Game/Final/Sprites/Trees/tree_stump_small_Sprite
-MRUItem2=/Game/Final/Sprites/Trees/tree_stump_small
-MRUItem3=/Game/Final/Sprites/Trees/tree_stump3_Sprite
-MRUItem4=/Game/Final/Sprites/Trees/tree_stump3
-MRUItem5=/Game/Final/Sprites/Trees/tree2_Sprite
-MRUItem6=/Game/Final/Sprites/Trees/tree1_Sprite
-MRUItem7=/Game/Final/Sprites/Trees/isnlandstrees_Sprite_0
-MRUItem8=/Game/Final/Sprites/Trees/isnlandstrees
-MRUItem9=/Game/Final/Sprites/Trees/islandtrees3_Sprite_1
-MRUItem10=/Game/Final/Sprites/Trees/islandtrees3_Sprite_0
-MRUItem11=/Game/Final/Sprites/Trees/islandtree2_Sprite_0
-MRUItem12=/Game/Final/Sprites/Trees/IMG-0465_Sprite_0
-MRUItem13=/Game/Final/Sprites/Trees/IMG-0465_Sprite_1
-MRUItem14=/Game/Final/Sprites/Tentacles/tentaclearchsmall_Sprite_0
-MRUItem15=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0
-MRUItem16=/Game/Final/Sprites/Tentacles/tentacle_ground2_Sprite_0
-MRUItem17=/Game/Final/Sprites/Tentacles/tentacle_ground2
-MRUItem18=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0
-MRUItem19=/Game/Final/Sprites/Tentacles/tentacle_ground1
+MRUItem0=/Game/Final/Sprites/Tentacles/tentacle2_Sprite_0
+MRUItem1=/Game/Final/Sprites/Tentacles/tentacle2_Sprite_1
+MRUItem2=/Game/Final/Sprites/Tentacles/tentacle_ground1
+MRUItem3=/Game/Final/Sprites/Trees/Tree_stump_Sprite
+MRUItem4=/Game/Final/Sprites/Trees/Tree_stump
+MRUItem5=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
+MRUItem6=/Game/Final/Sprites/Trees/islandtree2_Sprite_0
+MRUItem7=/Game/Final/Sprites/Trees/islandtrees3_Sprite_0
+MRUItem8=/Game/Final/Sprites/Menus/Main_credits
+MRUItem9=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0
+MRUItem10=/Game/Final/Sprites/Tentacles/tentacle_ground2_Sprite_0
+MRUItem11=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0
+MRUItem12=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
+MRUItem13=/Game/Final/Sprites/Tentacles/tentaclearchsmall_Sprite_0
+MRUItem14=/Game/Final/Sprites/Trees/tree_stump_small_Sprite
+MRUItem15=/Game/Final/Sprites/Trees/tree_stump_small
+MRUItem16=/Game/Final/Sprites/Trees/tree_stump3_Sprite
+MRUItem17=/Game/Final/Sprites/Trees/tree_stump3
+MRUItem18=/Game/Final/Sprites/Trees/tree2_Sprite
+MRUItem19=/Game/Final/Sprites/Trees/tree1_Sprite
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
@@ -2019,10 +2019,12 @@ MRUItem19=/Game/Final/Sprites/Tentacles/tentacle_ground1
 /Game/Final/Sprites/Trees/tree_stump3_Sprite.tree_stump3_Sprite=1
 /Game/Final/Sprites/Trees/tree_stump_small.tree_stump_small=1
 /Game/Final/Sprites/Trees/tree_stump_small_Sprite.tree_stump_small_Sprite=1
+/Game/Final/Sprites/Menus/Main_credits.Main_credits=1
+/Game/Final/Sprites/Trees/Tree_stump.Tree_stump=1
 
 [DetailPropertyExpansion]
-PaperSprite="\"Object.Collision.CollisionGeometry\" \"Object.Collision.CollisionGeometry.Shapes.Shapes[0].Vertices.Vertices[7]\" "
-Object="\"Object.Collision.CollisionGeometry\" \"Object.Collision.CollisionGeometry.Shapes.Shapes[0].Vertices.Vertices[7]\" "
+PaperSprite="\"Object.Collision.CollisionGeometry\" "
+Object="\"Object.Collision.CollisionGeometry\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
