--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,7 +113,7 @@ MRUItem5=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Final
 ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Tentacles
-ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Tentacles
+ContentBrowserTab1.SelectedPaths=/Game/Final/Blueprint
 None=======
 None=======
 ContentBrowserTab1.SourcesExpanded=True
@@ -1255,6 +1255,150 @@ REINST_BP_Following_Boss_C_167.Tags=True
 REINST_BP_Following_Boss_C_167.ComponentReplication=True
 REINST_BP_Following_Boss_C_167.Cooking=True
 REINST_BP_Following_Boss_C_167.Events=True
+BP_Maincharacter_C.Variable=True
+BP_Maincharacter_C.Sockets=True
+BP_Maincharacter_C.Character Movement: Jumping / Falling=True
+BP_Maincharacter_C.Character Movement (General Settings)=True
+BP_Maincharacter_C.Character Movement: Walking=True
+BP_Maincharacter_C.Character Movement: Swimming=True
+BP_Maincharacter_C.Character Movement: Flying=True
+BP_Maincharacter_C.Character Movement: Custom Movement=True
+BP_Maincharacter_C.Character Movement (Rotation Settings)=True
+BP_Maincharacter_C.Character Movement (Networking)=True
+BP_Maincharacter_C.Character Movement: Physics Interaction=True
+BP_Maincharacter_C.Character Movement=True
+BP_Maincharacter_C.Character Movement: Avoidance=True
+BP_Maincharacter_C.Character Movement: NavMesh Movement=True
+BP_Maincharacter_C.RootMotion=True
+BP_Maincharacter_C.NavMovement=True
+BP_Maincharacter_C.Velocity=True
+BP_Maincharacter_C.PlanarMovement=True
+BP_Maincharacter_C.MovementComponent=True
+BP_Maincharacter_C.Tags=True
+BP_Maincharacter_C.ComponentReplication=True
+BP_Maincharacter_C.Activation=True
+BP_Maincharacter_C.Cooking=True
+BP_Maincharacter_C.Events=True
+REINST_BP_Maincharacter_C_86.Variable=True
+REINST_BP_Maincharacter_C_86.Sockets=True
+REINST_BP_Maincharacter_C_86.Character Movement: Jumping / Falling=True
+REINST_BP_Maincharacter_C_86.Character Movement (General Settings)=True
+REINST_BP_Maincharacter_C_86.Character Movement: Walking=True
+REINST_BP_Maincharacter_C_86.Character Movement: Swimming=True
+REINST_BP_Maincharacter_C_86.Character Movement: Flying=True
+REINST_BP_Maincharacter_C_86.Character Movement: Custom Movement=True
+REINST_BP_Maincharacter_C_86.Character Movement (Rotation Settings)=True
+REINST_BP_Maincharacter_C_86.Character Movement (Networking)=True
+REINST_BP_Maincharacter_C_86.Character Movement: Physics Interaction=True
+REINST_BP_Maincharacter_C_86.Character Movement=True
+REINST_BP_Maincharacter_C_86.Character Movement: Avoidance=True
+REINST_BP_Maincharacter_C_86.Character Movement: NavMesh Movement=True
+REINST_BP_Maincharacter_C_86.RootMotion=True
+REINST_BP_Maincharacter_C_86.NavMovement=True
+REINST_BP_Maincharacter_C_86.Velocity=True
+REINST_BP_Maincharacter_C_86.PlanarMovement=True
+REINST_BP_Maincharacter_C_86.MovementComponent=True
+REINST_BP_Maincharacter_C_86.Tags=True
+REINST_BP_Maincharacter_C_86.ComponentReplication=True
+REINST_BP_Maincharacter_C_86.Activation=True
+REINST_BP_Maincharacter_C_86.Cooking=True
+REINST_BP_Maincharacter_C_86.Events=True
+REINST_BP_Maincharacter_C_99.Variable=True
+REINST_BP_Maincharacter_C_99.Sockets=True
+REINST_BP_Maincharacter_C_99.Character Movement: Jumping / Falling=True
+REINST_BP_Maincharacter_C_99.Character Movement (General Settings)=True
+REINST_BP_Maincharacter_C_99.Character Movement: Walking=True
+REINST_BP_Maincharacter_C_99.Character Movement: Swimming=True
+REINST_BP_Maincharacter_C_99.Character Movement: Flying=True
+REINST_BP_Maincharacter_C_99.Character Movement: Custom Movement=True
+REINST_BP_Maincharacter_C_99.Character Movement (Rotation Settings)=True
+REINST_BP_Maincharacter_C_99.Character Movement (Networking)=True
+REINST_BP_Maincharacter_C_99.Character Movement: Physics Interaction=True
+REINST_BP_Maincharacter_C_99.Character Movement=True
+REINST_BP_Maincharacter_C_99.Character Movement: Avoidance=True
+REINST_BP_Maincharacter_C_99.Character Movement: NavMesh Movement=True
+REINST_BP_Maincharacter_C_99.RootMotion=True
+REINST_BP_Maincharacter_C_99.NavMovement=True
+REINST_BP_Maincharacter_C_99.Velocity=True
+REINST_BP_Maincharacter_C_99.PlanarMovement=True
+REINST_BP_Maincharacter_C_99.MovementComponent=True
+REINST_BP_Maincharacter_C_99.Tags=True
+REINST_BP_Maincharacter_C_99.ComponentReplication=True
+REINST_BP_Maincharacter_C_99.Activation=True
+REINST_BP_Maincharacter_C_99.Cooking=True
+REINST_BP_Maincharacter_C_99.Events=True
+REINST_BP_Maincharacter_C_112.Variable=True
+REINST_BP_Maincharacter_C_112.Sockets=True
+REINST_BP_Maincharacter_C_112.Character Movement: Jumping / Falling=True
+REINST_BP_Maincharacter_C_112.Character Movement (General Settings)=True
+REINST_BP_Maincharacter_C_112.Character Movement: Walking=True
+REINST_BP_Maincharacter_C_112.Character Movement: Swimming=True
+REINST_BP_Maincharacter_C_112.Character Movement: Flying=True
+REINST_BP_Maincharacter_C_112.Character Movement: Custom Movement=True
+REINST_BP_Maincharacter_C_112.Character Movement (Rotation Settings)=True
+REINST_BP_Maincharacter_C_112.Character Movement (Networking)=True
+REINST_BP_Maincharacter_C_112.Character Movement: Physics Interaction=True
+REINST_BP_Maincharacter_C_112.Character Movement=True
+REINST_BP_Maincharacter_C_112.Character Movement: Avoidance=True
+REINST_BP_Maincharacter_C_112.Character Movement: NavMesh Movement=True
+REINST_BP_Maincharacter_C_112.RootMotion=True
+REINST_BP_Maincharacter_C_112.NavMovement=True
+REINST_BP_Maincharacter_C_112.Velocity=True
+REINST_BP_Maincharacter_C_112.PlanarMovement=True
+REINST_BP_Maincharacter_C_112.MovementComponent=True
+REINST_BP_Maincharacter_C_112.Tags=True
+REINST_BP_Maincharacter_C_112.ComponentReplication=True
+REINST_BP_Maincharacter_C_112.Activation=True
+REINST_BP_Maincharacter_C_112.Cooking=True
+REINST_BP_Maincharacter_C_112.Events=True
+REINST_BP_Maincharacter_C_129.Variable=True
+REINST_BP_Maincharacter_C_129.Sockets=True
+REINST_BP_Maincharacter_C_129.Character Movement: Jumping / Falling=True
+REINST_BP_Maincharacter_C_129.Character Movement (General Settings)=True
+REINST_BP_Maincharacter_C_129.Character Movement: Walking=True
+REINST_BP_Maincharacter_C_129.Character Movement: Swimming=True
+REINST_BP_Maincharacter_C_129.Character Movement: Flying=True
+REINST_BP_Maincharacter_C_129.Character Movement: Custom Movement=True
+REINST_BP_Maincharacter_C_129.Character Movement (Rotation Settings)=True
+REINST_BP_Maincharacter_C_129.Character Movement (Networking)=True
+REINST_BP_Maincharacter_C_129.Character Movement: Physics Interaction=True
+REINST_BP_Maincharacter_C_129.Character Movement=True
+REINST_BP_Maincharacter_C_129.Character Movement: Avoidance=True
+REINST_BP_Maincharacter_C_129.Character Movement: NavMesh Movement=True
+REINST_BP_Maincharacter_C_129.RootMotion=True
+REINST_BP_Maincharacter_C_129.NavMovement=True
+REINST_BP_Maincharacter_C_129.Velocity=True
+REINST_BP_Maincharacter_C_129.PlanarMovement=True
+REINST_BP_Maincharacter_C_129.MovementComponent=True
+REINST_BP_Maincharacter_C_129.Tags=True
+REINST_BP_Maincharacter_C_129.ComponentReplication=True
+REINST_BP_Maincharacter_C_129.Activation=True
+REINST_BP_Maincharacter_C_129.Cooking=True
+REINST_BP_Maincharacter_C_129.Events=True
+REINST_BP_Maincharacter_C_142.Variable=True
+REINST_BP_Maincharacter_C_142.Sockets=True
+REINST_BP_Maincharacter_C_142.Character Movement: Jumping / Falling=True
+REINST_BP_Maincharacter_C_142.Character Movement (General Settings)=True
+REINST_BP_Maincharacter_C_142.Character Movement: Walking=True
+REINST_BP_Maincharacter_C_142.Character Movement: Swimming=True
+REINST_BP_Maincharacter_C_142.Character Movement: Flying=True
+REINST_BP_Maincharacter_C_142.Character Movement: Custom Movement=True
+REINST_BP_Maincharacter_C_142.Character Movement (Rotation Settings)=True
+REINST_BP_Maincharacter_C_142.Character Movement (Networking)=True
+REINST_BP_Maincharacter_C_142.Character Movement: Physics Interaction=True
+REINST_BP_Maincharacter_C_142.Character Movement=True
+REINST_BP_Maincharacter_C_142.Character Movement: Avoidance=True
+REINST_BP_Maincharacter_C_142.Character Movement: NavMesh Movement=True
+REINST_BP_Maincharacter_C_142.RootMotion=True
+REINST_BP_Maincharacter_C_142.NavMovement=True
+REINST_BP_Maincharacter_C_142.Velocity=True
+REINST_BP_Maincharacter_C_142.PlanarMovement=True
+REINST_BP_Maincharacter_C_142.MovementComponent=True
+REINST_BP_Maincharacter_C_142.Tags=True
+REINST_BP_Maincharacter_C_142.ComponentReplication=True
+REINST_BP_Maincharacter_C_142.Activation=True
+REINST_BP_Maincharacter_C_142.Cooking=True
+REINST_BP_Maincharacter_C_142.Events=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1921,6 +2065,7 @@ ExternalImagePicker.TimeStamp=2018.10.02-23.34.42
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite.tentaclearchlarge_Sprite;
 RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentaclearchsmall_Sprite_0.tentaclearchsmall_Sprite_0;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss;
 RecentlyPlaced=/Game/Final/Sprites/Fruits/fruit_power.fruit_power;
@@ -1940,29 +2085,28 @@ RecentlyPlaced=/Game/Final/Sprites/Trees/IMG-0465_Sprite_1.IMG-0465_Sprite_1;
 RecentlyPlaced=/Game/Final/Sprites/Trees/IMG-0465_Sprite_0.IMG-0465_Sprite_0;
 RecentlyPlaced=/Game/Final/Sprites/Platforms/bomb_container.bomb_container;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Final/Sprites/background_Sprite.background_Sprite;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Sprites/Tentacles/tentacle2_Sprite_0
-MRUItem1=/Game/Final/Sprites/Tentacles/tentacle2_Sprite_1
-MRUItem2=/Game/Final/Sprites/Tentacles/tentacle_ground1
-MRUItem3=/Game/Final/Sprites/Trees/Tree_stump_Sprite
-MRUItem4=/Game/Final/Sprites/Trees/Tree_stump
-MRUItem5=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
-MRUItem6=/Game/Final/Sprites/Trees/islandtree2_Sprite_0
-MRUItem7=/Game/Final/Sprites/Trees/islandtrees3_Sprite_0
-MRUItem8=/Game/Final/Sprites/Menus/Main_credits
-MRUItem9=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0
-MRUItem10=/Game/Final/Sprites/Tentacles/tentacle_ground2_Sprite_0
-MRUItem11=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0
-MRUItem12=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
-MRUItem13=/Game/Final/Sprites/Tentacles/tentaclearchsmall_Sprite_0
-MRUItem14=/Game/Final/Sprites/Trees/tree_stump_small_Sprite
-MRUItem15=/Game/Final/Sprites/Trees/tree_stump_small
-MRUItem16=/Game/Final/Sprites/Trees/tree_stump3_Sprite
-MRUItem17=/Game/Final/Sprites/Trees/tree_stump3
-MRUItem18=/Game/Final/Sprites/Trees/tree2_Sprite
-MRUItem19=/Game/Final/Sprites/Trees/tree1_Sprite
+MRUItem0=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem1=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
+MRUItem2=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite
+MRUItem3=/Game/Final/Sprites/Tentacles/tentaclearchsmall_Sprite_0
+MRUItem4=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0
+MRUItem5=/Game/Final/Sprites/Menus/buttons/Main_newgames
+MRUItem6=/Game/Final/Sprites/Menus/backgrounds/GameOver_background
+MRUItem7=/Game/Final/Sprites/Menus/backgrounds/Pause_background
+MRUItem8=/Game/Final/Sprites/Menus/backgrounds/Main_background
+MRUItem9=/Game/Final/Sprites/Trees/Tree_stump_Sprite
+MRUItem10=/Game/Final/Sprites/Trees/Tree_stump
+MRUItem11=/Game/Final/Sprites/Trees/islandtrees3_Sprite_0
+MRUItem12=/Game/Final/Sprites/Tentacles/tentacle2_Sprite_0
+MRUItem13=/Game/Final/Sprites/Tentacles/tentacle2_Sprite_1
+MRUItem14=/Game/Final/Sprites/Tentacles/tentacle_ground1
+MRUItem15=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
+MRUItem16=/Game/Final/Sprites/Trees/islandtree2_Sprite_0
+MRUItem17=/Game/Final/Sprites/Menus/Main_credits
+MRUItem18=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0
+MRUItem19=/Game/Final/Sprites/Tentacles/tentacle_ground2_Sprite_0
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
@@ -2021,10 +2165,15 @@ MRUItem19=/Game/Final/Sprites/Trees/tree1_Sprite
 /Game/Final/Sprites/Trees/tree_stump_small_Sprite.tree_stump_small_Sprite=1
 /Game/Final/Sprites/Menus/Main_credits.Main_credits=1
 /Game/Final/Sprites/Trees/Tree_stump.Tree_stump=1
+/Game/Final/Sprites/Menus/backgrounds/Main_background.Main_background=1
+/Game/Final/Sprites/Menus/backgrounds/Pause_background.Pause_background=1
+/Game/Final/Sprites/Menus/backgrounds/GameOver_background.GameOver_background=1
+/Game/Final/Sprites/Menus/buttons/Main_newgames.Main_newgames=1
+/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite.tentaclearchlarge_Sprite=1
 
 [DetailPropertyExpansion]
 PaperSprite="\"Object.Collision.CollisionGeometry\" "
-Object="\"Object.Collision.CollisionGeometry\" "
+Object=
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
